@@ -248,6 +248,12 @@ to send input to it is via the input and inputstring attributes.</p>
       Defaults to <code>false</code>.  <em>Since Ant 1.6.</em></td>
     <td align="center" valign="top">No</td>
   </tr>
+  <tr>
+    <td valign="top">ignoremissing</td>
+    <td valign="top">Whether to ignore nonexistent files specified
+      via filelists.  <em>Since Ant 1.7.</em></td>
+    <td align="center" valign="top">No, default is <i>true</i></td>
+  </tr>
 </table>
 <h3>Parameters specified as nested elements</h3>
 <h4>fileset</h4>
